Rename notebooks and add Tijuana River region testing

--- a/generate_regions_auto.ipynb
+++ b/generate_regions_auto.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# sliceyslicey\n",
+    "# generate_regions_auto\n",
     "\n",
-    "this notebook's purpose is to find regions of interest in the ocean current maps and slice them out\n",
+    "this notebook's purpose is to automatically find regions of interest in the ocean current maps and slice them out\n",
     "\n",
     "in other words, find the regions with actual data and get some info about the coordinates\n",
     "\n",
