Particle repetition testing with tijuana area

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for a single vector value:\n",
+    "for a single vector value on 2 km region0 data:\n",
     "\n",
     "slow dataset index time elapsed: 950.4818730354309\n",
     "\n",
