Fix issues, auto-gif gen with magick

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "### currently implemented:\n",
     "\n",
-    "rip data straight from the 6 km data for areas where data is considered missing in the 2 km data"
+    "rip data straight from the lower resolution data for areas where data is considered missing in the high resolution data"
    ]
   },
   {
@@ -305,7 +305,10 @@
     "def get_interped(i, ref, vec, invalid_where):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
+    "    i (int)\n",
+    "    ref (dict)\n",
     "    vec (str): either u or v\n",
+    "    invalid_where (array_like)\n",
     "    \"\"\"\n",
     "    time_diff = np.diff(ref[\"fs\"].U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
