Fix issue with timedelta

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -308,7 +308,7 @@
     "    i (int)\n",
     "    ref (dict)\n",
     "    vec (str): either u or v\n",
-    "    invalid_where (array_like)\n",
+    "    invalid_where (array-like)\n",
     "    \"\"\"\n",
     "    time_diff = np.diff(ref[\"fs\"].U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
