--- a/parcels_compare_interp.ipynb
+++ b/parcels_compare_interp.ipynb
@@ -2004,7 +2004,7 @@
     "    (32.551707, -117.137)\n",
     "])\n",
     "\n",
-    "repetitions = math.floor(time_range[1] / repeat_dt.seconds)\n",
+    "repetitions = math.floor(time_range[1] / repeat_dt.total_seconds())\n",
     "total = repetitions * particles_per_dt\n",
     "lat_arr = np.zeros(total)\n",
     "lon_arr = np.zeros(total)\n",
