Ignore an annoying warning

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -25934,9 +25934,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('py3_parcels': conda)",
+   "display_name": "py3_parcels",
    "language": "python",
-   "name": "python361064bitpy3parcelscondabee0c1456d074cfd93730bbeac2714e8"
+   "name": "py3_parcels"
   },
   "language_info": {
    "codemirror_mode": {
