Add saving particle trajectory data

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -297,14 +297,14 @@
    "source": [
     "def get_interped(i, ref, vec, invalid_where):\n",
     "    \"\"\"\n",
-    "    Parameters:\n",
-    "    i (int)\n",
-    "    ref (dict)\n",
-    "    vec (str): either u or v\n",
-    "    invalid_where (array-like)\n",
+    "    Args:\n",
+    "        i (int)\n",
+    "        ref (dict)\n",
+    "        vec (str): either u or v\n",
+    "        invalid_where (array-like)\n",
     "    \n",
     "    Returns:\n",
-    "    float: nan if no data was found, interpolated value otherwise\n",
+    "        float: nan if no data was found, interpolated value otherwise\n",
     "    \"\"\"\n",
     "    time_diff = np.diff(ref[\"fs\"].U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
@@ -824,9 +824,9 @@
    "source": [
     "def conv_to_dataarray(arr, dataarr):\n",
     "    \"\"\"\n",
-    "    Parameters:\n",
-    "    arr (array-like)\n",
-    "    dataarr (xr.DataArray): only used to label coordinates, dimensions, and metadata.\n",
+    "    Args:\n",
+    "        arr (array-like)\n",
+    "        dataarr (xr.DataArray): only used to label coordinates, dimensions, and metadata.\n",
     "    \"\"\"\n",
     "    return xr.DataArray(arr, coords=dataarr.coords, dims=dataarr.dims, attrs=dataarr.attrs)"
    ]
