Test if kd tree was actually needed (spoiler: it was)

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "the purpose of this notebook is just to get data from thredds and save it so that I don't have to wait for the very fat data every time I test\n",
     "\n",
-    "takes data from `access_thredds_regions` (the pickle files) to slice out smaller regions of data with actual data\n",
+    "takes data from `generate_regions_auto` (the pickle files) to slice out smaller regions of data with actual data\n",
     "\n",
     "larger spans of time are possible now that only smaller regions are being saved\n",
     "\n",
