Add some basic particle trajectory analysis

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -798,13 +798,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conv_to_dataarray(arr, dataarr):\n",
+    "def conv_to_dataarray(arr, darr_ref):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        arr (array-like)\n",
-    "        dataarr (xr.DataArray): only used to label coordinates, dimensions, and metadata.\n",
+    "        darr_ref (xr.DataArray): only used to label coordinates, dimensions, and metadata.\n",
     "    \"\"\"\n",
-    "    return xr.DataArray(arr, coords=dataarr.coords, dims=dataarr.dims, attrs=dataarr.attrs)"
+    "    return xr.DataArray(arr, coords=darr_ref.coords, dims=darr_ref.dims, attrs=darr_ref.attrs)"
    ]
   },
   {
