--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -165,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3_parcels",
    "language": "python",
-   "name": "python3"
+   "name": "py3_parcels"
   },
   "language_info": {
    "codemirror_mode": {
