--- a/generate_regions_auto.ipynb
+++ b/generate_regions_auto.ipynb
@@ -327,9 +327,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3_parcels",
    "language": "python",
-   "name": "python3"
+   "name": "py3_parcels"
   },
   "language_info": {
    "codemirror_mode": {
