Add utils.py, clean up code

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -63,52 +63,9 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "from parcels import FieldSet\n",
-    "from datetime import timedelta, datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_6KM = 6\n",
-    "DATA_2KM = 2\n",
-    "DATA_1KM = 1\n",
+    "from datetime import timedelta, datetime\n",
     "\n",
-    "filename_dict = {\n",
-    "    DATA_6KM: \"west_coast_6km_hourly\",\n",
-    "    DATA_2KM: \"west_coast_2km_hourly\",\n",
-    "    DATA_1KM: \"west_coast_1km_hourly\"\n",
-    "}\n",
-    "\n",
-    "def get_file_info(path, res):\n",
-    "    xrds = xr.open_dataset(path)\n",
-    "    # flat mesh so the velocity data isn't converted when retrieving interpolated velocities\n",
-    "    fs = FieldSet.from_xarray_dataset(\n",
-    "        xrds.copy(deep=True),\n",
-    "        dict(U=\"u\",V=\"v\"),\n",
-    "        dict(lat=\"lat\",lon=\"lon\",time=\"time\"),\n",
-    "        mesh=\"flat\"\n",
-    "    )\n",
-    "    xrds.close()\n",
-    "    lat = xrds[\"lat\"].values\n",
-    "    lon = xrds[\"lon\"].values\n",
-    "    return dict(\n",
-    "        path = path,\n",
-    "        res = res,\n",
-    "        xrds = xrds,\n",
-    "        fs = fs,\n",
-    "        timerng = (xrds[\"time\"].min().values, xrds[\"time\"].max().values),\n",
-    "        lat = lat,\n",
-    "        lon = lon,\n",
-    "        domain = {\n",
-    "            \"S\": lat.min(),\n",
-    "            \"N\": lat.max(),\n",
-    "            \"W\": lon.min(),\n",
-    "            \"E\": lon.max(),\n",
-    "        }\n",
-    "    )"
+    "from utils import get_file_info, generate_mask, conv_to_dataarray"
    ]
   },
   {
@@ -131,11 +88,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = get_file_info(\"west_coast_1km_hourly_netcdfs/west_coast_1km_hourly_region_tijuana_river.nc\", DATA_1KM)\n",
+    "target = get_file_info(\"target\", \"west_coast_1km_hourly_netcdfs/west_coast_1km_hourly_region_tijuana_river.nc\", 1)\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(\"west_coast_2km_hourly_netcdfs/west_coast_2km_hourly_region0.nc\", DATA_2KM),\n",
-    "    get_file_info(\"west_coast_6km_hourly_netcdfs/west_coast_6km_hourly_region0.nc\", DATA_6KM)\n",
+    "    get_file_info(\"ref2km\", \"west_coast_2km_hourly_netcdfs/west_coast_2km_hourly_region0.nc\", 2),\n",
+    "    get_file_info(\"ref6km\", \"west_coast_6km_hourly_netcdfs/west_coast_6km_hourly_region0.nc\", 6)\n",
     "]"
    ]
   },
@@ -164,8 +121,8 @@
     "# reference_interp_method = \"linear_invdist_land_tracer\"\n",
     "\n",
     "for r in interp_references:\n",
-    "    r[\"fs\"].U.interp_method = reference_interp_method\n",
-    "    r[\"fs\"].V.interp_method = reference_interp_method"
+    "    r[\"fs_flat\"].U.interp_method = reference_interp_method\n",
+    "    r[\"fs_flat\"].V.interp_method = reference_interp_method"
    ]
   },
   {
@@ -177,31 +134,6 @@
     "note that when this xarray Dataset is passed into parcels, all the nan values change to 0 and the mask generation won't work anymore\n",
     "\n",
     "so the Dataset is copied for use with the FieldSet instead"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_mask(data):\n",
-    "    \"\"\"\n",
-    "    Generates a boolean mask signifying which points in the data are invalid.\n",
-    "    \n",
-    "    Args:\n",
-    "        data (np.ndarray): an array with the shape of (time, lat, lon)\n",
-    "    \"\"\"\n",
-    "    mask = np.zeros(data.shape, dtype=bool)\n",
-    "    for i in range(data.shape[1]):\n",
-    "        for j in range(data.shape[2]):\n",
-    "            point = data.T[j][i]\n",
-    "            nan_vals = np.isnan(point)\n",
-    "            # if the point at (lat, lon) contains real data and nan values\n",
-    "            # mark those points as invalid\n",
-    "            if not nan_vals.all():\n",
-    "                mask.T[j][i][:] = np.where(nan_vals.flatten(), 1, 0)\n",
-    "    return mask"
    ]
   },
   {
@@ -272,22 +204,22 @@
     "    \"\"\"\n",
     "    Args:\n",
     "        i (int)\n",
-    "        ref (dict)\n",
+    "        ref (dict): reference Dataset\n",
     "        vec (str): either u or v\n",
     "        invalid_where (array-like)\n",
     "    \n",
     "    Returns:\n",
     "        float: nan if no data was found, interpolated value otherwise\n",
     "    \"\"\"\n",
-    "    time_diff = np.diff(ref[\"fs\"].U.grid.time)[0]\n",
+    "    time_diff = np.diff(ref[\"fs_flat\"].U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
     "    lat = target[\"lat\"][invalid_where[1][i]]\n",
     "    lon = target[\"lon\"][invalid_where[2][i]] \n",
     "    if np.isnan(ref[\"xrds\"][vec].values[t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]]):\n",
     "        return np.nan\n",
     "    if vec == \"u\":\n",
-    "        return ref[\"fs\"].U[t * time_diff, 0, lat, lon]\n",
-    "    return ref[\"fs\"].V[t * time_diff, 0, lat, lon]"
+    "        return ref[\"fs_flat\"].U[t * time_diff, 0, lat, lon]\n",
+    "    return ref[\"fs_flat\"].V[t * time_diff, 0, lat, lon]"
    ]
   },
   {
@@ -392,21 +324,6 @@
    "metadata": {},
    "source": [
     "### formatting, saving, and testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def conv_to_dataarray(arr, darr_ref):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        arr (array-like)\n",
-    "        darr_ref (xr.DataArray): only used to label coordinates, dimensions, and metadata.\n",
-    "    \"\"\"\n",
-    "    return xr.DataArray(arr, coords=darr_ref.coords, dims=darr_ref.dims, attrs=darr_ref.attrs)"
    ]
   },
   {
