--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -35,6 +35,9 @@
     "from parcels import AdvectionRK4\n",
     "from datetime import timedelta, datetime\n",
     "\n",
+    "import utils\n",
+    "from utils import get_file_info, load_config\n",
+    "\n",
     "# ignore annoying deprecation warnings\n",
     "import warnings\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
@@ -42,66 +45,6 @@
     "\n",
     "# ignore divide by nan error that happens constantly with parcels\n",
     "np.seterr(divide='ignore', invalid='ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_6KM = 6\n",
-    "DATA_2KM = 2\n",
-    "DATA_1KM = 1\n",
-    "\n",
-    "filename_dict = {\n",
-    "    DATA_6KM: \"west_coast_6km_hourly\",\n",
-    "    DATA_2KM: \"west_coast_2km_hourly\",\n",
-    "    DATA_1KM: \"west_coast_1km_hourly\"\n",
-    "}\n",
-    "\n",
-    "def get_file_info(name, path, res, parcels_cfg):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        name (str)\n",
-    "        path (str)\n",
-    "        res (int)\n",
-    "        parcels_cfg (dict)\n",
-    "    \"\"\"\n",
-    "    xrds = xr.open_dataset(path)\n",
-    "    # spherical mesh\n",
-    "    fs = FieldSet.from_xarray_dataset(\n",
-    "            xrds.copy(deep=True),\n",
-    "            dict(U=\"u\",V=\"v\"),\n",
-    "            dict(lat=\"lat\",lon=\"lon\",time=\"time\")\n",
-    "        )\n",
-    "    xrds.close()\n",
-    "    lat = xrds[\"lat\"].values\n",
-    "    lon = xrds[\"lon\"].values\n",
-    "    return dict(\n",
-    "        name = name,\n",
-    "        path = path,\n",
-    "        res = res,\n",
-    "        xrds = xrds,\n",
-    "        fs = fs,\n",
-    "        timerng = (xrds[\"time\"].min().values, xrds[\"time\"].max().values),\n",
-    "        timerng_secs = fs.gridset.dimrange(\"time\"),\n",
-    "        lat = lat,\n",
-    "        lon = lon,\n",
-    "        domain = {\n",
-    "            \"S\": lat.min(),\n",
-    "            \"N\": lat.max(),\n",
-    "            \"W\": lon.min(),\n",
-    "            \"E\": lon.max(),\n",
-    "        },\n",
-    "        cfg = parcels_cfg\n",
-    "    )\n",
-    "\n",
-    "def load_config(path):\n",
-    "    with open(path) as f:\n",
-    "        config = json.load(f)\n",
-    "    # TODO do some config verification here\n",
-    "    return config"
    ]
   },
   {
@@ -250,7 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# setting up times, intervals, and paths for simulation\n",
@@ -262,7 +207,7 @@
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 1}\")\n",
     "    else:\n",
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 2}\")\n",
-    "    f[\"snap_path\"] = Path(f\"snapshots_{filename_dict[f['res']]}/{f['name']}\")\n",
+    "    f[\"snap_path\"] = Path(f\"snapshots_{utils.filename_dict[f['res']]}/{f['name']}\")\n",
     "    f[\"snap_path\"].mkdir(parents=True, exist_ok=True)\n",
     "    print(f\"Path to save snapshots to: {f['snap_path']}\")\n",
     "    # only clear directory if desired or actually saving images\n",
@@ -331,7 +276,7 @@
     "            [\n",
     "                \"magick\", \"-delay\", str(gif_delay),\n",
     "                str(f[\"snap_path\"]) + \"/*.png\", # path to the snapshots to stitch\n",
-    "                f\"snapshots_{filename_dict[f['res']]}/partsim_{f['name']}.gif\" # path to save gif to\n",
+    "                f\"snapshots_{utils.filename_dict[f['res']]}/partsim_{f['name']}.gif\" # path to save gif to\n",
     "            ],\n",
     "            stdout=subprocess.PIPE,\n",
     "            stderr=subprocess.PIPE,\n",
