Even more cleanup

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -26,7 +26,9 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "\n",
+    "from utils import xr_dataset_to_fieldset"
    ]
   },
   {
@@ -157,7 +159,7 @@
    "source": [
     "netcdf_filename = \"west_coast_1km_hourly_netcdfs/west_coast_1km_hourly_region_tijuana_river.nc\"\n",
     "ds = xr.open_dataset(netcdf_filename)\n",
-    "fs = FieldSet.from_xarray_dataset(ds, dict(U=\"u\",V=\"v\"), dict(lat=\"lat\",lon=\"lon\",time=\"time\"))\n",
+    "fs = xr_dataset_to_fieldset(ds)\n",
     "ds.close()\n",
     "fs.U.show()"
    ]
