--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -65,7 +65,7 @@
     "from parcels import FieldSet\n",
     "from datetime import timedelta, datetime\n",
     "\n",
-    "from utils import get_file_info, generate_mask, conv_to_dataarray"
+    "from utils import get_file_info, generate_mask, conv_to_dataarray, xr_dataset_to_fieldset"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_interp = FieldSet.from_xarray_dataset(target_interped_xrds.copy(deep=True), dict(U=\"u\",V=\"v\"), dict(lat=\"lat\",lon=\"lon\",time=\"time\"))"
+    "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)"
    ]
   },
   {
