--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -48,6 +48,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## configuration\n",
+    "\n",
+    "change the contents of `configs` for the simulation configuration you want"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
