--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -200,6 +200,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_nearest_current(ref, vec, t, lat, lon):\n",
+    "    return ref[\"xrds\"][vec].values[t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]]\n",
+    "\n",
+    "\n",
+    "def get_current_interp(ref, vec, t, lat, lon):\n",
+    "    if vec == \"u\":\n",
+    "        return ref[\"fs_flat\"].U[t, 0, lat, lon]\n",
+    "    if vec == \"v\":\n",
+    "        return ref[\"fs_flat\"].V[t, 0, lat, lon]\n",
+    "    raise Exception(f\"Invalid vector {vec}\")\n",
+    "\n",
+    "    \n",
     "def get_interped(i, ref, vec, invalid_where):\n",
     "    \"\"\"\n",
     "    Args:\n",
@@ -214,12 +226,12 @@
     "    time_diff = np.diff(ref[\"fs_flat\"].U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
     "    lat = target[\"lat\"][invalid_where[1][i]]\n",
-    "    lon = target[\"lon\"][invalid_where[2][i]] \n",
-    "    if np.isnan(ref[\"xrds\"][vec].values[t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]]):\n",
+    "    lon = target[\"lon\"][invalid_where[2][i]]\n",
+    "    current = get_current_interp(ref, vec, t * time_diff, lat, lon)\n",
+    "    # TODO: testing whether `current == 0` actually helps or not\n",
+    "    if np.isnan(get_nearest_current(ref, vec, t, lat, lon)) and current == 0:\n",
     "        return np.nan\n",
-    "    if vec == \"u\":\n",
-    "        return ref[\"fs_flat\"].U[t * time_diff, 0, lat, lon]\n",
-    "    return ref[\"fs_flat\"].V[t * time_diff, 0, lat, lon]"
+    "    return current"
    ]
   },
   {
@@ -247,8 +259,38 @@
     "    target_interped_u[invalid_pos_new] = [get_interped(i, f, \"u\", invalid_pos_new) for i in range(num_invalid_new)]\n",
     "    target_interped_v[invalid_pos_new] = [get_interped(i, f, \"v\", invalid_pos_new) for i in range(num_invalid_new)]\n",
     "    invalid_interped = generate_mask(target_interped_u)\n",
+    "    print(f\"total invalid values after interpolation with {f['name']}: {invalid_interped.sum()}\")\n",
+    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
     "time_en = time.time()\n",
     "print(f\"time elapsed: {time_en - time_st}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### result: interpolate only when interpolated current is non-zero OR not nan\n",
+    "\n",
+    "total invalid values after interpolation with ref2km: 1569\n",
+    "\n",
+    "    values filled: 12582\n",
+    "total invalid values after interpolation with ref6km: 14\n",
+    "\n",
+    "    values filled: 1555"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### result: interpolate whenever nearest data point is not nan\n",
+    "\n",
+    "total invalid values after interpolation with ref2km: 3176\n",
+    "\n",
+    "    values filled: 10975\n",
+    "total invalid values after interpolation with ref6km: 758\n",
+    "\n",
+    "    values filled: 2418"
    ]
   },
   {
