--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -64,7 +64,8 @@
    "source": [
     "configs = [\n",
     "    \"parcels_configs/tijuana_lin_cfg.json\",\n",
-    "    \"parcels_configs/tijuana_simpterp_cfg.json\"\n",
+    "    \"parcels_configs/tijuana_simpterp_cfg.json\",\n",
+    "    \"parcels_configs/tijuana_lin_aggr_cfg.json\"\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
@@ -104,7 +105,7 @@
     "def DeleteParticle(particle, fieldset, time):\n",
     "    particle.delete()\n",
     "    \n",
-    "def exec_save_pset(data, i, runtime, dt, zpad = 3, save_snapshot = True, exec_pset = True):\n",
+    "def exec_save_pset(data, i, runtime, dt, zpad=3, save_snapshot=True, exec_pset=True):\n",
     "    \"\"\"\n",
     "    Saves a snapshot of a particle simulation and then executes.\n",
     "    \n",
@@ -235,7 +236,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# execution of simulation\n",
