Testing and attempted fixes

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -189,6 +189,7 @@
    "source": [
     "import scipy.spatial\n",
     "\n",
+    "# set up kdtrees for all references\n",
     "for f in interp_references:\n",
     "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lat\"]]).T)\n",
     "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lon\"]]).T)"
@@ -200,38 +201,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_nearest_current(ref, vec, t, lat, lon):\n",
-    "    return ref[\"xrds\"][vec].values[t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]]\n",
+    "def get_nearest_current(ref, t, lat, lon):\n",
+    "    index = (t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1])\n",
+    "    return ref[\"xrds\"][\"u\"].values[index], ref[\"xrds\"][\"v\"].values[index]\n",
     "\n",
     "\n",
-    "def get_current_interp(ref, vec, t, lat, lon):\n",
-    "    if vec == \"u\":\n",
-    "        return ref[\"fs_flat\"].U[t, 0, lat, lon]\n",
-    "    if vec == \"v\":\n",
-    "        return ref[\"fs_flat\"].V[t, 0, lat, lon]\n",
-    "    raise Exception(f\"Invalid vector {vec}\")\n",
+    "def get_current_interp(ref, t, lat, lon):\n",
+    "    return ref[\"fs_flat\"].U[t, 0, lat, lon], ref[\"fs_flat\"].V[t, 0, lat, lon]\n",
     "\n",
-    "    \n",
-    "def get_interped(i, ref, vec, invalid_where):\n",
+    "\n",
+    "def get_interped(i, ref, invalid_where):\n",
     "    \"\"\"\n",
     "    Args:\n",
-    "        i (int)\n",
+    "        i (int): index on invalid_where\n",
     "        ref (dict): reference Dataset\n",
-    "        vec (str): either u or v\n",
-    "        invalid_where (array-like)\n",
+    "        invalid_where (array-like): (3, n) dimensional array representing all invalid positions\n",
     "    \n",
     "    Returns:\n",
-    "        float: nan if no data was found, interpolated value otherwise\n",
+    "        (u, v): (nan, nan) if no data was found, interpolated values otherwise\n",
     "    \"\"\"\n",
     "    time_diff = np.diff(ref[\"fs_flat\"].U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
     "    lat = target[\"lat\"][invalid_where[1][i]]\n",
     "    lon = target[\"lon\"][invalid_where[2][i]]\n",
-    "    current = get_current_interp(ref, vec, t * time_diff, lat, lon)\n",
+    "    current_u, current_v = get_current_interp(ref, t * time_diff, lat, lon)\n",
+    "    current = current_u + current_v\n",
     "    # TODO: testing whether `current == 0` actually helps or not\n",
-    "    if np.isnan(get_nearest_current(ref, vec, t, lat, lon)) and current == 0:\n",
-    "        return np.nan\n",
-    "    return current"
+    "    # basically makes interpolation a bit more \"aggressive\"?\n",
+    "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]) and current == 0:\n",
+    "        return np.nan, np.nan\n",
+    "    return current_u, current_v"
    ]
   },
   {
@@ -256,8 +255,14 @@
     "for f in interp_references:\n",
     "    invalid_pos_new = np.where(invalid_interped)\n",
     "    num_invalid_new = invalid_interped.sum()\n",
-    "    target_interped_u[invalid_pos_new] = [get_interped(i, f, \"u\", invalid_pos_new) for i in range(num_invalid_new)]\n",
-    "    target_interped_v[invalid_pos_new] = [get_interped(i, f, \"v\", invalid_pos_new) for i in range(num_invalid_new)]\n",
+    "    arr_u = np.zeros(num_invalid_new)\n",
+    "    arr_v = np.zeros(num_invalid_new)\n",
+    "    for i in range(num_invalid_new):\n",
+    "        c_u, c_v = get_interped(i, f, invalid_pos_new)\n",
+    "        arr_u[i] = c_u\n",
+    "        arr_v[i] = c_v\n",
+    "    target_interped_u[invalid_pos_new] = arr_u\n",
+    "    target_interped_v[invalid_pos_new] = arr_v\n",
     "    invalid_interped = generate_mask(target_interped_u)\n",
     "    print(f\"total invalid values after interpolation with {f['name']}: {invalid_interped.sum()}\")\n",
     "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
@@ -271,12 +276,14 @@
    "source": [
     "#### result: interpolate only when interpolated current is non-zero OR not nan\n",
     "\n",
-    "total invalid values after interpolation with ref2km: 1569\n",
+    "total invalid values after interpolation with ref2km: 1562\n",
     "\n",
-    "    values filled: 12582\n",
-    "total invalid values after interpolation with ref6km: 14\n",
+    "    values filled: 12589\n",
+    "total invalid values after interpolation with ref6km: 2\n",
     "\n",
-    "    values filled: 1555"
+    "    values filled: 1560\n",
+    "    \n",
+    "YEP it fills a lot more values"
    ]
   },
   {
@@ -316,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy.ma as ma\n",
