--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -63,9 +63,10 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"parcels_configs/tijuana_lin_cfg.json\",\n",
-    "    \"parcels_configs/tijuana_simpterp_cfg.json\",\n",
-    "    \"parcels_configs/tijuana_lin_aggr_cfg.json\"\n",
+    "#     \"parcels_configs/tijuana_lin_cfg.json\",\n",
+    "#     \"parcels_configs/tijuana_simpterp_cfg.json\",\n",
+    "#     \"parcels_configs/tijuana_lin_aggr_cfg.json\",\n",
+    "    \"parcels_configs/tijuana_less_cfg.json\"\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
@@ -98,12 +99,15 @@
     "class TimedParticle(JITParticle):\n",
     "    lifetime = Variable(\"lifetime\", initial=0, dtype=np.float32)\n",
     "    spawntime = Variable(\"spawntime\", initial=attrgetter(\"time\"), dtype=np.float32)\n",
+    "\n",
     "    \n",
     "def ParticleLifetime(particle, fieldset, time):\n",
     "    particle.lifetime += particle.dt\n",
     "\n",
+    "    \n",
     "def DeleteParticle(particle, fieldset, time):\n",
     "    particle.delete()\n",
+    "\n",
     "    \n",
     "def exec_save_pset(data, i, runtime, dt, zpad=3, save_snapshot=True, exec_pset=True):\n",
     "    \"\"\"\n",
@@ -253,6 +257,12 @@
     "    # run the last interval (the remainder) if needed\n",
     "    if cfg[\"last_int\"] != 0:\n",
     "        exec_save_pset(f, cfg[\"snap_num\"] + 1, cfg[\"last_int\"], cfg[\"simulation_dt\"], save_snapshot=cfg[\"save_snapshots\"])\n",
+    "        \n",
+    "    # run one more time with 0 runtime because for some reason\n",
+    "    # particles can be out-of-bounds without being deleted\n",
+    "    # ??? how does this happen ???\n",
+    "    # im not actually sure if this really does anything but hey its worth a shot\n",
+    "    exec_save_pset(f, 0, 0, 0, save_snapshot=False)\n",
     "        \n",
     "    f[\"pfile\"].export()\n",
     "    f[\"pfile\"].close()\n",
