Add particle lifetime plotting

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -88,11 +88,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = get_file_info(\"target\", \"west_coast_1km_hourly_netcdfs/west_coast_1km_hourly_region_tijuana_river.nc\", 1)\n",
+    "target = get_file_info(\"west_coast_1km_hourly_netcdfs/west_coast_1km_hourly_region_tijuana_river.nc\", 1, name=\"target\")\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(\"ref2km\", \"west_coast_2km_hourly_netcdfs/west_coast_2km_hourly_region0.nc\", 2),\n",
-    "    get_file_info(\"ref6km\", \"west_coast_6km_hourly_netcdfs/west_coast_6km_hourly_region0.nc\", 6)\n",
+    "    get_file_info(\"west_coast_2km_hourly_netcdfs/west_coast_2km_hourly_region0.nc\", 2, name=\"ref2km\"),\n",
+    "    get_file_info(\"west_coast_6km_hourly_netcdfs/west_coast_6km_hourly_region0.nc\", 6, name=\"ref6km\")\n",
     "]"
    ]
   },
