--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -36,7 +38,7 @@
     "from datetime import timedelta, datetime\n",
     "\n",
     "import utils\n",
-    "from utils import get_file_info, load_config\n",
+    "from utils import get_file_info, load_config, show_particles_age\n",
     "\n",
     "# ignore annoying deprecation warnings\n",
     "import warnings\n",
@@ -63,14 +65,14 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "#     \"parcels_configs/tijuana_lin_cfg.json\",\n",
+    "    \"parcels_configs/tijuana_lin_cfg.json\",\n",
     "#     \"parcels_configs/tijuana_simpterp_cfg.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr_cfg.json\",\n",
-    "    \"parcels_configs/tijuana_less_cfg.json\"\n",
+    "#     \"parcels_configs/tijuana_less_cfg.json\"\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
-    "files = [get_file_info(cfg[\"name\"], cfg[\"netcdf_path\"], cfg[\"resolution\"], cfg[\"parcels_config\"]) for cfg in loaded_configs]"
+    "files = [get_file_info(cfg[\"netcdf_path\"], cfg[\"resolution\"], name=cfg[\"name\"], parcels_cfg=cfg[\"parcels_config\"]) for cfg in loaded_configs]"
    ]
   },
   {
@@ -120,7 +122,11 @@
     "        dt (float): seconds\n",
     "    \"\"\"\n",
     "    if save_snapshot:\n",
-    "        data[\"pset\"].show(savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad), field=\"vector\", vmax=max_v)\n",
+    "        # TODO add option if you want to see particle ages or just the vector field\n",
+    "        # because right now can't do both\n",
+    "        days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
+    "#         data[\"pset\"].show(savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad), field=\"vector\", vmax=max_v)\n",
+    "        show_particles_age(data[\"pset\"], data[\"domain\"], savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad), vmax=days)\n",
     "    \n",
     "    if exec_pset:\n",
     "        # temporary - TODO make it only init once\n",
