--- a/test_interp_compare.ipynb
+++ b/test_interp_compare.ipynb
@@ -55,7 +55,7 @@
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
-    "files = [get_file_info(cfg[\"name\"], cfg[\"netcdf_path\"], cfg[\"resolution\"], cfg[\"parcels_config\"]) for cfg in loaded_configs]"
+    "files = [get_file_info(cfg[\"netcdf_path\"], cfg[\"resolution\"], name=cfg[\"name\"], parcels_cfg=cfg[\"parcels_config\"]) for cfg in loaded_configs]"
    ]
   },
   {
