Option for showing vector field again

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -65,10 +65,10 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"parcels_configs/tijuana_lin_cfg.json\",\n",
+    "#     \"parcels_configs/tijuana_lin_cfg.json\",\n",
     "#     \"parcels_configs/tijuana_simpterp_cfg.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr_cfg.json\",\n",
-    "#     \"parcels_configs/tijuana_less_cfg.json\"\n",
+    "    \"parcels_configs/tijuana_less_cfg.json\"\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
@@ -111,7 +111,7 @@
     "    particle.delete()\n",
     "\n",
     "    \n",
-    "def exec_save_pset(data, i, runtime, dt, zpad=3, save_snapshot=True, exec_pset=True):\n",
+    "def exec_save_pset(data, i, runtime, dt, zpad=3, ages=True, save_snapshot=True, exec_pset=True):\n",
     "    \"\"\"\n",
     "    Saves a snapshot of a particle simulation and then executes.\n",
     "    \n",
@@ -126,7 +126,10 @@
     "        # because right now can't do both\n",
     "        days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
     "#         data[\"pset\"].show(savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad), field=\"vector\", vmax=max_v)\n",
-    "        show_particles_age(data[\"pset\"], data[\"domain\"], savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad), vmax=days)\n",
+    "        fi = None if ages else \"vector\"\n",
+    "        show_particles_age(data[\"pset\"], data[\"domain\"], field=fi,\n",
+    "                           savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad),\n",
+    "                           vmax=days, field_vmax=max_v)\n",
     "    \n",
     "    if exec_pset:\n",
     "        # temporary - TODO make it only init once\n",
@@ -251,18 +254,20 @@
    },
    "outputs": [],
    "source": [
+    "# show age or not (temporary)\n",
+    "age = True\n",
     "# execution of simulation\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
     "    for i in range(cfg[\"snap_num\"]):\n",
-    "        exec_save_pset(f, i, cfg[\"snapshot_interval\"], cfg[\"simulation_dt\"], save_snapshot=cfg[\"save_snapshots\"])\n",
+    "        exec_save_pset(f, i, cfg[\"snapshot_interval\"], cfg[\"simulation_dt\"], ages=age, save_snapshot=cfg[\"save_snapshots\"])\n",
     "\n",
     "    # save the second-to-last frame\n",
-    "    exec_save_pset(f, cfg[\"snap_num\"], 0, 0, save_snapshot=cfg[\"save_snapshots\"], exec_pset=False)\n",
+    "    exec_save_pset(f, cfg[\"snap_num\"], 0, 0, ages=age, save_snapshot=cfg[\"save_snapshots\"], exec_pset=False)\n",
     "\n",
     "    # run the last interval (the remainder) if needed\n",
     "    if cfg[\"last_int\"] != 0:\n",
-    "        exec_save_pset(f, cfg[\"snap_num\"] + 1, cfg[\"last_int\"], cfg[\"simulation_dt\"], save_snapshot=cfg[\"save_snapshots\"])\n",
+    "        exec_save_pset(f, cfg[\"snap_num\"] + 1, cfg[\"last_int\"], cfg[\"simulation_dt\"], ages=age, save_snapshot=cfg[\"save_snapshots\"])\n",
     "        \n",
     "    # run one more time with 0 runtime because for some reason\n",
     "    # particles can be out-of-bounds without being deleted\n",
