Add multiple trajectory plots, and refactors

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -28,7 +28,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
-    "from utils import xr_dataset_to_fieldset"
+    "from parcels_utils import xr_dataset_to_fieldset"
    ]
   },
   {
