--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -65,7 +65,8 @@
     "from parcels import FieldSet\n",
     "from datetime import timedelta, datetime\n",
     "\n",
-    "from utils import get_file_info, generate_mask, conv_to_dataarray, xr_dataset_to_fieldset"
+    "from utils import generate_mask, conv_to_dataarray\n",
+    "from parcels_utils import get_file_info, xr_dataset_to_fieldset"
    ]
   },
   {
@@ -178,7 +179,11 @@
     "\n",
     "in theory, the latitude and longitude values are equally spaced. however, the difference between the coordinate values always flucuates a very small amount between two distinct values, so it's not perfectly equally spaced.\n",
     "\n",
-    "from testing, this causes enough error to completely change a simulation, so a kdtree must be used."
+    "from testing, this causes enough error to completely change a simulation, so a kdtree must be used.\n",
+    "\n",
+    "# another note\n",
+    "\n",
+    "I just looked at the particle trajectory that used the indexing without kd trees and it looked MAJORLY fucked up, so I probably wrote something wrong with the method. TODO will come back to this later."
    ]
   },
   {
