--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -34,11 +34,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from parcels import FieldSet, ParticleSet\n",
-    "from parcels import AdvectionRK4\n",
-    "from datetime import timedelta, datetime\n",
+    "from datetime import timedelta\n",
     "\n",
     "import utils\n",
-    "from utils import get_file_info, load_config, show_particles_age\n",
+    "from utils import load_config, create_path\n",
+    "from parcels_utils import get_file_info\n",
+    "from plot_utils import plot_particles_age\n",
     "\n",
     "# ignore annoying deprecation warnings\n",
     "import warnings\n",
@@ -94,7 +95,7 @@
     "# reference tutorial_Agulhasparticles\n",
     "# needs ErrorCode for particle recovery\n",
     "from operator import attrgetter\n",
-    "from parcels import ErrorCode, JITParticle, Variable\n",
+    "from parcels import ErrorCode, JITParticle, Variable, AdvectionRK4\n",
     "\n",
     "max_v = 1.1 # for display purposes only, so the vector field colors don't change every iteration\n",
     "\n",
@@ -127,7 +128,7 @@
     "        days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
     "#         data[\"pset\"].show(savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad), field=\"vector\", vmax=max_v)\n",
     "        fi = None if ages else \"vector\"\n",
-    "        show_particles_age(data[\"pset\"], data[\"domain\"], field=fi,\n",
+    "        plot_particles_age(data[\"pset\"], data[\"domain\"], field=fi,\n",
     "                           savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad),\n",
     "                           vmax=days, field_vmax=max_v)\n",
     "    \n",
@@ -161,8 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "part_path = Path(\"particledata\")\n",
-    "part_path.mkdir(parents=True, exist_ok=True)\n",
+    "part_path = create_path(\"particledata\")\n",
     "\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
@@ -230,8 +230,7 @@
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 1}\")\n",
     "    else:\n",
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 2}\")\n",
-    "    f[\"snap_path\"] = Path(f\"snapshots_{utils.filename_dict[f['res']]}/{f['name']}\")\n",
-    "    f[\"snap_path\"].mkdir(parents=True, exist_ok=True)\n",
+    "    f[\"snap_path\"] = create_path(f\"snapshots_{utils.filename_dict[f['res']]}/{f['name']}\")\n",
     "    print(f\"Path to save snapshots to: {f['snap_path']}\")\n",
     "    # only clear directory if desired or actually saving images\n",
     "    if cfg[\"save_snapshots\"]:\n",
@@ -301,7 +300,6 @@
     "import subprocess\n",
     "\n",
     "gif_delay = 25 # ms\n",
-    "\n",
     "\n",
     "for f in files:\n",
     "    if f[\"cfg\"][\"save_snapshots\"]:\n",
